kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
spec:
  selector:
    app:
  ports:
  - port:
