kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name:
spec:
 rules:
 - http:
     paths:
     - path: /
       backend:
         serviceName:
         servicePort:
   host:
